Fix sidebar collapse, expand tree when doc selected

--- a/src/app/Components/docs/docs-content/docs-content.component.scss
+++ b/src/app/Components/docs/docs-content/docs-content.component.scss
@@ -2,6 +2,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 
 h3 {
