--- a/src/app/Components/docs/docs-sidebar/docs-sidebar.component.scss
+++ b/src/app/Components/docs/docs-sidebar/docs-sidebar.component.scss
@@ -1,91 +1,99 @@
-.sidebar-container {
+.sidebar-layout {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: 100%;
-    width: 300px;
+    width: fit-content;
+    position: relative;
 
-    .sidebar-header {
+    .sidebar-container {
         display: flex;
-        flex-direction: row;
-        height: 36px;
-        align-items: center;
-        padding: 0 4px;
-        cursor: default;
-        box-shadow: 0 0 3px 0 #121212;
+        flex-direction: column;
+        height: 100%;
+        width: 300px;
 
-        .icon-container {
+        .sidebar-header {
             display: flex;
-            height: 30px;
-            width: 30px;
-            border-radius: 4px;
+            flex-direction: row;
+            height: 36px;
+            align-items: center;
+            padding: 0 4px;
+            cursor: default;
+            box-shadow: 0 0 3px 0 #121212;
+            overflow: hidden;
 
-            .mat-icon {
-                font-size: 30px;
+            .icon-container {
+                display: flex;
                 height: 30px;
                 width: 30px;
-                margin: auto;
-                cursor: default;
+                border-radius: 4px;
+
+                .mat-icon {
+                    font-size: 30px;
+                    height: 30px;
+                    width: 30px;
+                    margin: auto;
+                    cursor: default;
+                }
+            }
+
+            span {
+                font-size: 16px;
+                margin-left: 4px;
+                align-self: flex-end;
+                line-height: 32px;
+            }
+
+            .add-icon-container {
+                display: flex;
+                height: 26px;
+                width: 26px;
+                border-radius: 4px;
+
+                .mat-icon {
+                    font-size: 24px;
+                    height: 24px;
+                    width: 24px;
+                    margin: auto;
+                    cursor: pointer;
+                }
             }
         }
 
-        span {
-            font-size: 16px;
-            margin-left: 4px;
-            align-self: flex-end;
-            line-height: 32px;
-        }
-
-        .add-icon-container {
-            display: flex;
-            height: 26px;
-            width: 26px;
-            border-radius: 4px;
-
-            .mat-icon {
-                font-size: 24px;
-                height: 24px;
-                width: 24px;
-                margin: auto;
-                cursor: pointer;
-            }
+        .sidebar-content {
+            padding: 0 4px 4px;
+            height: calc(100% - 36px);
+            overflow-y: auto;
+            overflow-x: hidden;
         }
     }
 
-    .sidebar-content {
-        padding: 0 4px 4px;
-        height: calc(100% - 36px);
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
-}
-
-.sidebar-collapse-container {
-    display: flex;
-    position: absolute;
-    /* left: 0; */
-    transform: translateX(300px);
-    bottom: 8px;
-    z-index: 1;
-
-    .sidebar-collapse-button {
+    .sidebar-collapse-container {
         display: flex;
-        width: 48px;
-        height: 48px;
+        position: absolute;
+        bottom: 8px;
+        left: 100%;
+        z-index: 2;
 
-        .sidebar-collapse-icon {
+        .sidebar-collapse-button {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 24px;
-            cursor: pointer;
-            border-top-right-radius: 4px;
-            border-bottom-right-radius: 4px;
+            width: 48px;
+            height: 48px;
 
-            .mat-icon {
-                font-size: 24px;
-                height: 24px;
+            .sidebar-collapse-icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 width: 24px;
-                transform: rotateZ(90deg);
+                cursor: pointer;
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+
+                .mat-icon {
+                    font-size: 24px;
+                    height: 24px;
+                    width: 24px;
+                    transform: rotateZ(90deg);
+                }
             }
         }
     }
