--- a/src/app/Pages/docs-page/docs-page.component.scss
+++ b/src/app/Pages/docs-page/docs-page.component.scss
@@ -4,7 +4,3 @@
     flex-direction: row;
     height: 100%;
 }
-
-app-docs-sidebar {
-    //width: 300px;
-}
